NSH  header implementation
