# opot_sdk/node_controller/NodeTypes.py
@@ -1,15 +1,20 @@
+import os
+import socket
+import threading
 import time
 from random import randrange
-from threading import Lock
 
+import scapy.all as scapy
+from scapy.contrib.nsh import NSH
+from scapy.layers.inet import UDP, IP, TCP, fragment
+from scapy.layers.l2 import Ether
+from scapy.packet import Packet
+
+from opot_sdk.helpers.default_params.NodeParams import node_params
 from opot_sdk.helpers.enums import NodeStatus
 from opot_sdk.helpers import socketsSupport
 from opot_sdk.helpers.logging.NodeLogging import nodeLogging
 from opot_sdk.node_controller.GenericNode import GenericNode
-import logging
-from socket import error
-
-from opot_sdk.node_controller.SampleGen import SampleGen
 
 
 class IngressNode(GenericNode):
@@ -22,48 +27,49 @@ class IngressNode(GenericNode):
     def __init__(self, netconf_packet):
         super().__init__(netconf_packet)
         # self.master_secret = randrange(0, self.lagrange_data["prime"])
-        nodeLogging.root_logger.info("IngressNode Created in port {}".format(self.downstream_port))
+        nodeLogging.root_logger.info("IngressNode Created")
         # Update the status and send it to the controller
         self.status = NodeStatus.OPERATIVE
-        # self.sample_gen = SampleGen(self.node_address,self)
+        # Socket to send udp packets
+        self.socket = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
+        self.seq = 0
 
-    def get_receiver_message(self):
-        """
-        The first node will receive the application message encrypted.
-
-        """
-        message_encrypted = socketsSupport.extract_raw_data_from_socket(self.socket, protocol=self.protocol)
-        return message_encrypted
-
-    def node_functionality(self, data_received):
-        logging.info("Packet received from sender")
-
+    #  TODO for the moment we are using UDP to encapsulate the NSH header so fragmentation by the IP protocol
+    def pot_packet_handler(self, p: Packet):
         # Obtain the timestamp after receiving the packet
         timestamp = int(time.time() * 1e6)
-
-        # The OPoT mechanism starts:{}
         # We create a random integer between 0 and the prime number generated from the OPoT controller.
         # This random number is the independent term for the lagrange polynomial and at the end will be
         # the value that needs to be exactly the same that the CML value.
-        master_secret = randrange(0, self.pot_profile_list.prime_number)
-        nodeLogging.root_logger.debug(f'Master Secret {master_secret} for packet {self.seq}.')
-        # No previous CML calculated for the first node in the OPoT path. The default CML is 0
-        new_cml = self.generate_cml_value(previous_cml=0, public_secret=master_secret)
+        public_secret = randrange(0, self.pot_profile_list.prime_number)
+        new_cml = self.generate_cml_value(previous_cml=0, public_secret=public_secret)
         # Add sequence number
         seq = self.increase_sequence_number()
-        # Generate OPoT packet
-        opot_packet = self.build_packet(mask=self.upstream_mask,
-                                        message_data=data_received,
-                                        public_secret=master_secret,
-                                        new_cml=new_cml,
-                                        seq_number=seq)
-        # Get the address of the next node
-        # Send the packet
-        nodeLogging.root_logger.info("Sending packet to next node.")
-        socketsSupport.send_raw_data_to_address(self.socket, opot_packet, self.upstream_address, self.protocol)
-        # Send flow status to the controller
-        self.send_opot_log(new_cml, seq, timestamp, secret=master_secret)
-        # Increase by one the sequence
+        # Calculate first the pot information, which will be stored in the 16bytes context header of the NSH header
+        context_header = self.crypt_pot_values(public_secret, new_cml, self.seq, self.upstream_mask)
+        # Create the NSH header with the information needed.
+        ip_packet = p[IP]
+        nsh_header = self.generate_nsh(context_header, ip_packet)
+        # Send the encapsulated packet to the next hop IP / UDP / NSH
+        self.socket.sendto(bytes(nsh_header), (self.upstream_ip, node_params.nsh_port))
+        # scapy.send(IP(dst=self.upstream_ip) / udp_header, verbose=False)
+        # Send logs to controller
+        nodeLogging.root_logger.debug(f'Master Secret {public_secret} for packet {self.seq}.')
+        nodeLogging.root_logger.debug("Sending packet to next node.")
+        self.send_pot_log(new_cml, timestamp, seq, secret=public_secret)
+
+    def generate_nsh(self, context_header, ip_packet):
+        return NSH(
+            ttl=self.pot_path_length + 1,
+            mdtype=1,
+            # IP
+            nextproto=1,
+            # SFC path information
+            spi=self.service_path_identifier,
+            si=self.pot_path_length - 1,
+            # PoT data
+            context_header=context_header
+        ) / ip_packet
 
     def increase_sequence_number(self):
         self.seq = self.seq + 1
@@ -71,9 +77,6 @@ class IngressNode(GenericNode):
         if self.seq > 2 ** (8 * 4) - 1:
             self.seq = 0
         return self.seq
-
-    # def terminate(self):
-    #     super(GenericNode, self).terminate()
 
 
 class MiddleNode(GenericNode):
@@ -85,37 +88,32 @@ class MiddleNode(GenericNode):
 
     def __init__(self, netconf_packet):
         super().__init__(netconf_packet)
-        nodeLogging.root_logger.info("MiddleNode Created in port {}".format(self.downstream_port))
+        nodeLogging.root_logger.info("MiddleNode Created")
         # Update the status and send it to the controller
         self.status = NodeStatus.OPERATIVE
-        # self.send_status()
+        self.socket = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
 
-    def node_functionality(self, data_received):
-        nodeLogging.root_logger.info("Packet received from the previous node.")
-        # The OPoT mechanism continues:
-        # We will be waiting to receive the next packet information that will has the CML value calculated in the
-        # previous node. It will be an encrypted packet so we need to get the mask shared with our previous partner.
-        # IMPORTANT: The mask must be negotiated before socket.recv()
-
-        # Obtain the current timestamp
+    def pot_packet_handler(self, nsh_header: NSH):
         timestamp = int(time.time() * 1e6)
-        # Decrypt the packet
-        public_secret, cml, seq, data = self.decrypt_opot_packet(packet=data_received, mask=self.downstream_mask)
-        # Update the sequence from the packet
-
-        # Calculate the new CML
+        # First get the NSH packet
+        if not self.verify_nsh_packet(nsh_header):
+            return
+        # If the verification of the packet is correct, get the context header
+        enc_pot_data = nsh_header.context_header
+        # Decode pot data
+        public_secret, cml, seq = self.decrypt_pot_values(packet=enc_pot_data, mask=self.downstream_mask)
+        # Calculate new_cml
         new_cml = self.generate_cml_value(previous_cml=cml, public_secret=public_secret)
-        # We build a new packet updating the CML value and encrypting all the information.
-        opot_packet = self.build_packet(mask=self.upstream_mask,
-                                        new_cml=new_cml,
-                                        public_secret=public_secret,
-                                        seq_number=seq,
-                                        message_data=data)
-
-        nodeLogging.root_logger.debug("Sending packet to next node.")
-        socketsSupport.send_raw_data_to_address(self.socket, opot_packet, self.upstream_address, self.protocol)
-        # Set update to the controller
-        self.send_opot_log(new_cml, seq, timestamp)
+        # Encrypt pot values
+        new_enc_pot_data = self.crypt_pot_values(public_secret, new_cml, seq, self.upstream_mask)
+        # Modify nsh_header
+        nsh_header.ttl = nsh_header.ttl - 1
+        nsh_header.si = nsh_header.si - 1
+        nsh_header.context_header = new_enc_pot_data
+        # Send the new packet
+        self.socket.sendto(bytes(nsh_header), (self.upstream_ip, node_params.nsh_port))
+        # Send logs
+        self.send_pot_log(new_cml, timestamp, seq)
 
 
 class EgressNode(GenericNode):
@@ -128,39 +126,30 @@ class EgressNode(GenericNode):
     def __init__(self, netconf_packet):
         super().__init__(netconf_packet)
         # Obtain the information from the previous node
-        # Obtain the information of the receiver running the receiver_app.py
-        self.receiver_address = self.upstream_address
-        nodeLogging.root_logger.info("EgressNode Created in port {}".format(self.downstream_port))
+        nodeLogging.root_logger.info("EgressNode Created in port.")
         # Update the status and send it to the controller
         self.status = NodeStatus.OPERATIVE
-        # self.send_status()
+        if os.environ.get("FORCE_ERROR", None) is not None:
+            self.pot_profile_list.lpc = self.pot_profile_list.lpc + 1
 
-    def node_functionality(self, data_received):
-        nodeLogging.root_logger.info("Packet received from the previous node.")
-        # Obtain the current duration
+    def pot_packet_handler(self, nsh_header: NSH):
         timestamp = int(time.time() * 1e6)
-        # Decrypt the packet
-        public_secret, cml, seq, data = self.decrypt_opot_packet(packet=data_received, mask=self.downstream_mask)
+        # First get the NSH packet
+        if not self.verify_nsh_packet(nsh_header):
+            return
+        # If the verification of the packet is correct, get the context header
+        enc_pot_data = nsh_header.context_header
+        # Decode pot data
+        public_secret, cml, seq = self.decrypt_pot_values(packet=enc_pot_data, mask=self.downstream_mask)
         # Calculate the new CML
         new_cml = self.generate_cml_value(previous_cml=cml, public_secret=public_secret)
-        # The OPoT mechanism finish:
-        # The new_cml mod BigPrimeNumber must be equal to the secret (Polynomial independent term).
-
-        if (new_cml % self.pot_profile_list.prime_number) == public_secret + self.pot_profile_list.validator_key:  # Good case
-            nodeLogging.root_logger.info("OPoT Successful")
-            # Adding the last timestamp to the nodes_timestamps list
-            try:
-                socketsSupport.send_raw_data_to_address(self.socket, data, self.receiver_address,
-                                                        self.protocol)
-                nodeLogging.root_logger.debug("Sending data to the receiver")
-            except error as e:
-                nodeLogging.error_logger.exception("Error when sending packet {}".format(e))
-
-            # Send update to the controller telling him that the OPoT was successful
-            self.send_opot_log(new_cml, seq, timestamp, valid=True)
-        # OPoT Unsuccessful
+        if (
+                new_cml % self.pot_profile_list.prime_number) == public_secret + self.pot_profile_list.validator_key:  # Good case
+            ip_packet = nsh_header[IP]
+            scapy.send(ip_packet, verbose=False)
+            self.send_pot_log(new_cml, timestamp, seq, valid=True)
         else:
             nodeLogging.error_logger.error(f'OPoT unsuccessful master secret {public_secret} '
                                            f'vs calculated CML {self.pot_profile_list.prime_number}')
             # Send update to the controller telling him that the OPoT was unsuccessful
-            self.send_opot_log(new_cml, seq, timestamp, valid=False)
+            self.send_pot_log(new_cml, timestamp, seq, valid=False)
